[gd_scene load_steps=9 format=3 uid="uid://gjf3hyl7gscq"]

[ext_resource type="Theme" uid="uid://d3m46y6fmbccy" path="res://resources/theme_base.tres" id="1_037ec"]
[ext_resource type="Script" uid="uid://dxtm00owe3q0e" path="res://scenes/menu/menu.gd" id="1_klgdb"]
[ext_resource type="FontFile" uid="uid://bg5d6vo2gsvqc" path="res://assets/fonts/PressStart2P-Regular.ttf" id="2_e0arn"]
[ext_resource type="FontFile" uid="uid://5joqatek3cn2" path="res://assets/fonts/Audiowide-Regular.ttf" id="3_037ec"]
[ext_resource type="AudioStream" uid="uid://ny0f6vrabvmv" path="res://assets/audios/title.wav" id="5_r8yej"]
[ext_resource type="Script" uid="uid://ke8vda81p2fg" path="res://utils/sfx_manager.gd" id="7_3y2rt"]

[sub_resource type="FontVariation" id="FontVariation_y1o0p"]
base_font = ExtResource("2_e0arn")
variation_transform = Transform2D(1, 0.1, 0, 1, 0, 0)
spacing_glyph = 10

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y1o0p"]
content_margin_top = 10.0

[node name="Menu" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_037ec")
script = ExtResource("1_klgdb")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_bottom = -170.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 60

[node name="TitleContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="GameTitle" type="Label" parent="VBoxContainer/TitleContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_y1o0p")
theme_override_font_sizes/font_size = 60
text = "TETRIC"
horizontal_alignment = 1

[node name="GameTagline" type="Label" parent="VBoxContainer/TitleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.46666667, 1, 1, 0.7411765)
theme_override_fonts/font = ExtResource("3_037ec")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxEmpty_y1o0p")
text = "tetris but with a rhythmic twist"
horizontal_alignment = 1

[node name="ButtonsContainer" type="VBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 24
alignment = 1

[node name="PlayButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "Play"

[node name="EditorButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "Edit Levels"

[node name="QuitButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "Quit"

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_r8yej")
autoplay = true

[node name="SFX" type="AudioStreamPlayer" parent="."]
script = ExtResource("7_3y2rt")

[connection signal="mouse_entered" from="VBoxContainer/ButtonsContainer/PlayButton" to="." method="_on_mouse_entered_button"]
[connection signal="pressed" from="VBoxContainer/ButtonsContainer/PlayButton" to="." method="_on_play"]
[connection signal="mouse_entered" from="VBoxContainer/ButtonsContainer/EditorButton" to="." method="_on_mouse_entered_button"]
[connection signal="pressed" from="VBoxContainer/ButtonsContainer/EditorButton" to="." method="_on_level_editor"]
[connection signal="mouse_entered" from="VBoxContainer/ButtonsContainer/QuitButton" to="." method="_on_mouse_entered_button"]
[connection signal="pressed" from="VBoxContainer/ButtonsContainer/QuitButton" to="." method="_on_quit"]
